test/spec_vectors/i32/fail/module_66.wat
(module (func (result i32) (i32.shr_s (i64.const 0) (f32.const 0))))